Exercicios em PHP

--- a/ex27/ex27.html
+++ b/ex27/ex27.html
@@ -6,10 +6,14 @@
     <title>ex27</title>
 </head>
 <body>
-    <form>
-
-
+   <form method="POST" action="ex27.php" >
+        <h1>Verificando Hortifruti </h1>
+        <hr>
         
+        Informe o valor em KiloGramas de morango <input type="text" name="morango"> <br>
+        Informe o valor em KiloGramas de morango <input type="text" name="maca"> <br>
+         
+        <input type="submit" value="Verificar">
     </form>
 </body>
 </html>
